--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,40 @@
-.row {
-  border: 1px solid red;
-  margin: 5px;
-}
+@import url('https://fonts.googleapis.com/css?family=Cousine|Roboto+Mono');
 
-.col {
-  background-color: grey;
-}
-
-.img-height {
-  max-height: 300px;
-  min-height: 100%;
-}
-
-.js-id {
-  color: yellow;
+body {
+  /*font-family: 'Roboto Mono', monospace;*/
+  font-family: 'Cousine', monospace;
+  background: url('../images/keyboard.jpg');
+  color: #fefefe;
 }
 
 #js-hangman-word {
-  letter-spacing: 15px;
+  letter-spacing: 10px;
   font-family: monospace;
+}
+
+h1 {
+  font-size: 5rem;
+}
+
+/* 'Letters Guessed' needs height even while empty */
+.min-height {
+  min-height: 65px;
+}
+
+.row {
+  /*border: 1px solid red;*/
+  margin-top: 0.2rem;
+}
+
+.col-border {
+  border: 2px solid #fefefe;
+  border-radius: 10px;
+}
+
+.page-bg {
+  background-color: rgba(30,30,30,.8);
+  padding: 1rem 0;
+  margin-top: 1rem;
+  border: 3px solid #222;
+  border-radius: 20px;
 }
