--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Cousine|Roboto+Mono');
+@import url('https://fonts.googleapis.com/css?family=Cousine');
 
 body {
-  /*font-family: 'Roboto Mono', monospace;*/
   font-family: 'Cousine', monospace;
   background: url('../images/keyboard.jpg');
   color: #fefefe;
@@ -16,14 +15,8 @@ h1 {
   font-size: 5rem;
 }
 
-/* 'Letters Guessed' needs height even while empty */
 .min-height {
-  min-height: 65px;
-}
-
-.row {
-  /*border: 1px solid red;*/
-  margin-top: 0.2rem;
+  height: 50px;
 }
 
 .col-border {
@@ -34,7 +27,11 @@ h1 {
 .page-bg {
   background-color: rgba(30,30,30,.8);
   padding: 1rem 0;
-  margin-top: 1rem;
+  margin-top: .4rem;
   border: 3px solid #222;
   border-radius: 20px;
+}
+
+.spacer {
+  height: 100px;
 }
