Add styling of anchor tag

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,3 +34,13 @@ h1 {
 .spacer {
   height: 100px;
 }
+
+a {
+  font-size: .8rem;
+  color: #fefefe;
+}
+
+a:hover {
+  color: #bbb;
+  text-decoration: none;
+}
